2008-04-17  Neil Roberts  <neil@o-hand.com>

	Applied patch from bug #881

	* clutter/clutter-frame-source.h: 
	* clutter/clutter-frame-source.c:
	New files that contain a replacement for g_timeout that try to
	cope with system delays.

	* clutter/Makefile.am: Added clutter-frame-source.{c,h}

	* clutter/clutter-timeline.c (timeout_add): Use a frame source
	instead of a g_timeout.

	* clutter/clutter-main.c (clutter_threads_add_frame_source_full)
	(clutter_threads_add_frame_source): New public functions to wrap a
	frame source and grab the Clutter mutex.

	* clutter/clutter-timeout-pool.c: Now calculates the timeout
	expiration times in the same way as a frame source does so that it
	counts time in frame intervals instead of setting the next
	expiration time as an offset from the current time.

2008-04-17  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/clutter-fixed.c:
	(clutter_value_transform_fixed_int),
	(clutter_value_transform_fixed_double),
	(clutter_value_transform_fixed_float),
	(clutter_fixed_get_type): Add GValue transformation functions
	for ClutterFixed; copying a CLUTTER_TYPE_FIXED GValue into
	a G_TYPE_FLOAT/G_TYPE_DOUBLE one will automatically transform
	the fixed point representation into a floating point one. Also
	add the G_TYPE_INT transformation function to do a plain
	fixed->int copy.

	* clutter/clutter-units.c:
	(clutter_value_transform_unit_int),
	(clutter_unit_get_type): Add a unit->int transformation function.

2008-04-17  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/clutter-fixed.c (clutter_value_get_fixed): Fix typo
	in the function name.

2008-04-17  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/clutter-units.c (clutter_value_get_unit): Fix typo
	in the function name.

2008-04-17  Emmanuele Bassi  <ebassi@openedhand.com>

	* HACKING: Amend coding style and tenets, as it is now possible
	to install and use unit based properties in a safe way.

2008-04-17  Emmanuele Bassi  <ebassi@openedhand.com>
