@@ -1,3 +1,7 @@
+2008-04-17  Emmanuele Bassi  <ebassi@openedhand.com>
+
+	* clutter/clutter-frame-source.c: Small coding style fixes.
+
 2008-04-17  Neil Roberts  <neil@o-hand.com>
 
 	Applied patch from bug #881
